# AoC

./: .gitignore  README.md
2020/day_02/1/: Readme.md
2020/day_02/2/: Cargo.toml
2020/day_08/1/: Cargo.toml
2021/Template/: Program.cs
2021/day_01/1/: Program.cs
2021/day_01/2/: Program.cs
2021/day_02/1/: Program.cs
2021/day_02/2/: Program.cs
2021/day_03/1/: Program.cs
2021/day_03/2/: Program.cs
2021/day_03/5/: Program.cs
2021/day_04/1/: Program.cs
2021/day_04/2/: Program.cs
2021/day_04/6/: Program.cs
2021/day_04/7/: Program.cs
2021/day_05/1/: Program.cs
2021/day_05/8/: Program.cs
2021/day_05/9/: Program.cs
2021/day_06/1/: Program.cs
2021/day_06/10/: Program.cs
2021/day_06/2/: Program.cs
2021/day_07/1/: Program.cs
2021/day_07/12/: Program.cs
2021/day_07/13/: Program.cs
2021/day_07/2/: Program.cs
2021/day_08/: Program.cs
2021/day_09/1/: Program.cs
2021/day_09/2/: Program.cs
2021/day_10/1/: Program.cs
2021/day_10/2/: Program.cs
2021/day_11/1/: Program.cs
2021/day_11/2/: Program.cs
2021/day_12/1/: Program.cs
2021/day_12/2/: Program.cs
2021/day_13/1/: Program.cs
2021/day_13/2/: Program.cs
2021/day_14/1/: Program.cs
2021/day_14/2.5/: Program.cs
2021/day_14/2.75/: Program.cs
2021/day_17/: Program.cs
2021/day_23/1/: 1.sln  (+1 more)
2021/day_24/: Day 24 analysis.xlsx
2022/day_01/: Program.cs
2023/day_21/2/: 1.csproj  2.sln  CMakeLists.txt  Program.cs
2023/day_21/2/src/: main.cpp2
2024/day_01/: 2024 Problem 1.xlsx
Templates/: Readme.md
Templates/C#/: 1.csproj  Program.cs
Templates/Rust/: setup.txt
(+337 files in other folders)
